adding screen 1 and two

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,16 @@
 <link rel="stylesheet" type="text/css" href="/static/css/paypal.css">
 </head>
 <body>
-send money or view transaction history
+<header class="header">What are we doing?</header>
+
+<section class="pgcnt">
+<a href="/sendmoney" class="btn">Send Money</a>
+
+<a href="/transactionhistory" class="btn">Transaction History</a>
+
+</section>
+
+<footer class="footer"></footer>
 <script src="/static/js/paypal.js"></script>
 </body>
 </html>	
