--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 <title>Welcome to PayPal - <%=title %></title>
 <link rel="stylesheet" type="text/css" href="/static/css/paypal.css">
 </head>
-<body>
+<body class="hp">
 <header class="header">What are we doing?</header>
 
 <section class="pgcnt">
