--- a/views/sendmoney.html
+++ b/views/sendmoney.html
@@ -4,7 +4,7 @@
 <title>Welcome to PayPal - <%=title %></title>
 <link rel="stylesheet" type="text/css" href="/static/css/paypal.css">
 </head>
-<body>
+<body class="sm">
 <header class="header">Send Money</header>
 
 <section class="pgcnt">
